LPD-85821 buildRest
